@@ -331,7 +331,7 @@ Version 0.2.3
 * обновлён русский перевод
 * обновлён турецкий перевод (Bilgesu Güngör)
 * обновлён немецкий перевод (Panagiotis Papadopoulos)
-* обновлён украинский перевод (Gennadi Motsyo)
+* обновлён украинский перевод (Геннадий Моцьо)
 * обновлён итальянский перевод (Gian Paolo Renello)
 * обновлён польский перевод (Grzegorz Gibas)
 
@@ -388,7 +388,8 @@ Version 0.2.3
 * добавлена опция 'продолжить воспроизведение при запуске'
 * добавлено поиск в опции командной строки
 * добавлена возможность удалять дублирующиеся или несуществующие треки из списка
-* добавлен модуль поддержка http
+* добавлен модуль поддержки http
+* добавлен модуль поддержки mms (экспериментальный)
 * добавлена поддержка обложек в модуль mpris
 * удалены устаревшие классы Qt
 * удалена поддержка http из ядра
@@ -396,4 +397,8 @@ Version 0.2.3
 * улучшен модуль scrobbler
 * улучшен модуль файловых операций
 * устранены паузы между cue-треками
-* исправлен поиск внутри ape-файлов (thanks to Michail Zeludkov)
+* исправлен поиск внутри ape-файлов (Михаил Желудков)
+* обновлён русский перевод
+* обновлён украинский перевод (Геннадий Моцьо)
+* обновлён чешский перевод (Karel Volný)
+* обновлён венгерский перевод (Németh Gábor)
